src/test/ui/issues/issue-28134.rs
// compile-flags: --test

#![test] //~ ERROR cannot determine resolution for the attribute macro `test`
